es/v1.66/transfers-mol/guides/how-to-send-mol.mdx
---
title: 'Como enviar a Bre-B'
description: 'Como iniciar un flujo regulatorio en Transfiya'
icon: 'vault'
---

## Envio con liquidacion en MOL

### Resumen de cambios para entidad
Para cumplir con el flujo regulatorio, se usaría la misma integración del participante utilizando el concepto de Transfer para iniciar transferencias.

<Note>
Las interfaces de interacción no cambian para la entidad, ya que la plataforma cumple actualmente con la mayoría de los requisitos regulatorios.
</Note>

La liquidación con MOL y el manejo de tiempos ya están gestionados por la plataforma y no requieren cambios por parte de los participantes.

Los participantes únicamente deben asegurar para envio de transferencias:

- **Utilizar API de transferencias**: Mantener la misma integración para iniciar transferencias
- **Especificar tipo de transferencia**: Durante la marcha blanca, identificar las transferencias que se comunican con MOL usando "label.type":"SENDMOL"
- **Incluir marcas de tiempo**: Agregar marca de tiempo externa a la plataforma: "dispateched" para notificar tiempo de inicio de transferncia

### Origen y destino de transferencia

Las transferencias reguladas se definen como transferencias de cuenta a cuenta. Estas transacciones no deberían diferenciarse de las transferencias actuales entre cuentas en Transfiya.

<Note>
  La resolución de llaves debe realizarse antes de crear una transferencia.
</Note>

El modelo actual de Transfiya facilita las transferencias de cuenta a cuenta mediante el uso de credenciales de pago (signer handles) como origen y destino de una transferencia.

En caso de modelo regulado origen y destino de transferencia son conocidos por proceso previo de [resolucion de llaves](how-to-keys) y se realiza una cuenta a cuenta.

Mas sobre [signers](../es/about/about-signers).

### Concepto Transfer

Transfiya utiliza el concepto de "transfer" para iniciar pagos en el sistema agnosticos a caso a uso o tipo de transferencia.

<Note>
  El uso del modelo de transfer para iniciar pagos en el sistema permite emplear el mismo protocolo y REST API para cualquier caso de uso o flujo de dinero, incluyendo el nuevo flujo regulatorio.
</Note>

### Identificador de flujo

Cuando se inicia un transfer se activa uno de los flujos de pago orchestrados por la plataforma.

Flujo que se va usar en la marcha blanca y despues de 1 de Semptiembre para flujo regulatorio es **SENDMOL**.

<ResponseField name="labels.type" type="string[SENDMOL]">
    Tipo de transferencia.
</ResponseField>

Cambio principal de este flujo comparado con envio no regulado es en modelo de [liquidacion](../about/about-settelement) de fondos con MOL y [confirmacion de la cuenta](../about/about-accept).

Mas sobre flujos pueden conocer [aqui](../es/about/about-flows).

### Ejemplo de un transfer regulatorio

Para realizar un transfer con modelo regulatorio es necesario definir que el modelo de flujo y asegurar envio de marca de timepo de inicio.

Los cambios en el modelo son mostrados en el ejemplo de diferencias en codigo.

<Tabs>
  <Tab title="Request">
      ```json
     curl -X POST \
  -H "Content-Type: application/json" \
  -H "x-api-key: <API_KEY>" \
  -H "Authorization: Bearer <TOKEN>" \
  -d '{
    "source": "wXxwpxB32saqfmfMxAQD4SVWWhhn6akLC2",
    "target": "wRFmYXS2sP9ho9VCZ3j4FuP1j55ABeFvsF",
    "symbol": "$tin",
    "amount": "100",
    "labels": {
      "description": "Payment for lunch",
      "domain": "tin",
      "type": "SENDMOL",
      "sourceChannel": "APP",
      "tx_id": "20250114890915944TFY123456789012345",
      "received": "2025-01-14T20:40:57.322-05:00",
      "dispatched": "2025-01-14T20:40:58.322-05:00",
      "deviceFingerPrint": {
        "hash": "26fff5af6441f8e15a71e8d62c361714484b1b308c99e8eb68ca85e2a7e0dc58",
        "ipAddress": "2001:0db8:85a3:0000:0000:8a2e:0370:7334",
        "country": "Colombia",
        "city": "Bogotá",
        "mobileDevice": "990000862471854",
        "SIMCardId": "8991101200003204510",
        "model": "Huawei Mate 20 Pro",
        "operator": "Bharti Airtel Limited"
      }
    }
  }' "<TRANSFIYA URL>/v1/transfer"
        ```
  </Tab>
  <Tab title="Response">
      ```diff
      {
        "source": "wXxwpxB32saqfmfMxAQD4SVWWhhn6akLC2",
      - "target": "$573002414263",
      + "target": "wfvmRir8XxRtoEuUBDkv3BP4T7BQezwm1f",
        "amount": "100.00",
        "symbol": "$tin",
        "labels": {
          "hash": "PENDING",
          "type": "SENDMOL",
          "domain": "tin",
          "flowId": "Lf13jsK83omPv3bOt",
          "status": "PENDING",
          "tx_ref": "Lf13jsK83omPv3bOt",
      +   "tx_mol": "20250114890915944TFY123456789012345", // nuevo campo
      +   "received": "2025-01-14T20:40:57.322-05:00",
      +   "dispatched": "2025-01-14T20:40:57.322-05:00",
          "created": "2025-01-14T20:40:57.322-05:00",
          "updated": "2025-01-14T20:40:57.322-05:00",
          "description": "DEV - SEND trx 01",
          "sourceChannel": "APP",
          "deviceFingerPrint": {
            "city": "Bogotá",
            "hash": "26fff5af6441f8e15a71e8d62c361714484b1b308c99e8eb68ca85e2a7e0dc58",
            "model": "Huawei Mate 20 Pro",
            "country": "Colombia",
            "operator": "Bharti Airtel Limited",
            "SIMCardId": "8991101200003204510",
            "ipAddress": "2001:0db8:85a3:0000:0000:8a2e:0370:7334",
            "mobileDevice": "990000862471854"
          }
        },
        "snapshot": {
          "source": {
            "signer": {
              "handle": "wXxwpxB32saqfmfMxAQD4SVWWhhn6akLC2",
              "labels": {
                "name": "Jorge Alejandro Fernandez Garcia",
      +         "proprietary": "CC",
      +	        "identification": "1010101010",
      +         "bankAccountType": "SVGS",
      +         "bankAccountNumber": "12345654321",
      + 	      "bankId": "891234918",
      +         "targetSpbviCode": "TFY",
      -         "created": "2022-04-12T16:17:49.322-05:00",
      -         "createdBy": "tcYV0MRoklTXUwSFFkkQ",
      -         "description": "new descr",
      -         "routerReference": "$bancorojo"
              }
            },
      -     "wallet": {
      -       "handle": "$575555544444",
      -       "labels": {
      -         "name": "Test user 9",
      -         "type": "PERSON",
      -         "created": "2022-04-12T16:17:33.322-05:00",
      -         "updated": "2022-04-14T09:30:33.322-05:00",
      -         "createdBy": "$bancorojo"
      -       },
      -       "signer": [
      -         "wXxwpxB32saqfmfMxAQD4SVWWhhn6akLC2",
      -         "weqYJCU6MN193yJ63XehjT3VWFAAguAHHV"
      -       ],
      -       "default": "wXxwpxB32saqfmfMxAQD4SVWWhhn6akLC2"
      -     }
      -   },
      -   "symbol": {
      -     "signer": {
      -       "handle": "wfvmRir8XxRtoEuUBDkv3BP4T7BQezwm1f",
      -       "labels": {
      -         "type": "SYMBOL",
      -         "created": "2022-03-17T22:08:07.322-05:00",
      -         "createdBy": "$minka"
      -       }
      -     },
      -     "wallet": {
      -       "handle": "$tin",
      -       "labels": {
      -         "name": "tin",
      -         "type": "SYMBOL",
      -         "created": "2022-03-17T22:08:09.234-05:00",
      -         "updated": "2022-04-13T12:36:46.234-05:00",
      -         "createdBy": "$minka"
      -       },
      -       "signer": [
      -         "wfvmRir8XxRtoEuUBDkv3BP4T7BQezwm1f"
      -       ],
      -       "default": "wfvmRir8XxRtoEuUBDkv3BP4T7BQezwm1f"
      -     }
          },
          "target": {
            "signer": {
      +       "handle": "wfvmRir8XxRtoEuUBDkv3BP4T7BQezwm1f",
              "labels": {
                "name": "Jorge Alejandro Fernandez Garcia",
      +         "proprietary": "CC",
      +	        "identification": "1010101010",
      +         "bankAccountType": "SVGS",
      +         "bankAccountNumber": "12345654321",
      + 	      "bankId": "891234918",
      +         "targetSpbviCode": "TFY",
      -         "created": "2022-04-12T16:17:49-05:00",
      -         "createdBy": "tcYV0MRoklTXUwSFFkkQ",
      -         "description": "new descr",
      -         "routerReference": "$bancorojo"
              }
            },
      -     "wallet": {
      -       "handle": "$573002414263",
      -       "labels": {
      -         "type": "PERSON",
      -         "created": "2022-03-23T11:00:55.332-05:00",
      -         "updated": "2022-03-23T11:00:55.334-05:00"
      -       }
      -     }
          }
        },
        "error": {
          "code": 0,
          "message": "Success"
        },
        "action_id": "35de4d3d-3aba-4fb3-b110-d004ce2aabb2",
        "id": "35de4d3d-3aba-4fb3-b110-d004ce2aabb2"
      }
      ```
  </Tab>
  <Tab title="Error">
  ```diff
    {
      "error": {
        "code": 118,
        "message": "Parameter labels.tx_id contains unsupported characters"
      }
    }
   ```
  </Tab>
</Tabs>

## Aceptación en el flujo regulado

En el modelo regulado, la aceptación de una transferencia no depende de una acción explícita por parte del usuario final, como podría suceder en flujos tradicionales. Sin embargo, sí requiere de una validación formal por parte de la entidad financiera que actúa como banco receptor.

Este paso de aceptación es obligatorio antes de continuar con el procesamiento y consiste en que la entidad receptora verifique que la cuenta destino:

- Existe y está activa.
- Está habilitada para recibir pagos.
- Cumple con los requisitos establecidos por la regulación, como los límites de monto o tipo de moneda.

Una vez realizada esta validación, el banco destinatario confirma la aceptación utilizando el mecanismo estándar ya existente en TransfiYa para flujos asincrónicos. Esta aceptación por parte de la entidad equivale a una aprobación regulatoria que habilita a continuar con la operación de crédito y la posterior liquidación a través del MOL.

<Info icon="shield-check">
  Este modelo permite cumplir con la normativa vigente sin necesidad de cambiar los componentes fundamentales de la arquitectura de TransfiYa, facilitando así la adaptación de los bancos al nuevo flujo SPI.
</Info>

## Modelo de liquidación

Una vez que MOL entre en funcionamiento, cada transferencia deberá enviarse a MOL para su procesamiento y se pausará el procesamiento interno hasta recibir una llamada de continuación desde MOL.

Transfiya ya cuenta con un sistema de procesamiento asíncrono que continúa mediante llamadas API. El procesamiento de transferencias está implementado como un flujo de múltiples pasos, por lo que para soportar este cambio solo necesitamos extender el sistema internamente añadiendo nuevos pasos asíncronos al proceso, lo cual resulta sencillo gracias a la arquitectura actual.

Mas sobre liquidación pueden ver [aca](../about/about-settelement)

Cambios de flujo que incluyen llamadas a MOL e orchestraacion con otros sistemas de pago se manejan por parte de plataforma usando [orchestracion de flujos](../about/about-flows).
